Fix:background image on iphone devices

--- a/src/index.css
+++ b/src/index.css
@@ -52,10 +52,10 @@ hr {
     
    
   }
-  .day{
+  /* .day{
     position: relative;
     left:60px;
-  }
+  } */
 
   h2 {
     font-size: 15px;
@@ -84,6 +84,10 @@ hr {
     height: 100vh;
     width: 100vw;
   }
+  #weatherIcon{
+    margin:15px;
+
+  }
 
   .container {
     height: 100%;
@@ -105,7 +109,10 @@ hr {
   }
 
   .description {
-    font-size: 20px;
+    font-size: 13px;
+    text-align: center;
+    position: relative;
+    left: 13px;
   }
 }
 
